# ElferEngine

./: CMakeLists.txt
cmake/: global_settings.cmake
dependencies/: CMakeLists.txt
resources/: text.txt
source/: CMakeLists.txt  main.cc
